# aws-lambda-axum-template

./: .gitignore  Makefile  README.md  serverless.yml
aws_axum_lambda/: Cargo.toml
aws_axum_lambda/.cargo/: config.toml
aws_axum_lambda/api/: aws_entrypoint.rs  mod.rs
aws_axum_lambda/src/: lib.rs  main.rs  state.rs
aws_axum_lambda/src/features/: mod.rs
aws_axum_lambda/src/features/todo/: model.rs  repo.rs  route.rs
