[package]
name = "aws_axum_lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = { version = "0.13.0", default-features = false, features = [
    "apigw_rest",
] }
lambda_runtime = "0.13.0"
tokio = { version = "1.0", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
http-body-util = "0.1.2"
tower = "0.5.1"
tower-service = "0.3.2"
axum = "0.7.9"
hyper = "1.0"
dotenv = "0.15.0"
# db
# dynamodb = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.4-alpha", package = "aws-sdk-dynamodb" }
uuid = { version = "1.11.0", features = ["v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
aws-sdk-dynamodb = "1.55.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }

[[bin]]
name = "bootstrap"
path = "api/aws_entrypoint.rs"


[features]
default = ["production"]
local_dev = []
production = []
